# otto

./: .flake8  .gitignore  README.md  THIRD_PARTY_NOTICES  install.sh  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_app.sh  start_web.sh
.deepeval/: .deepeval_telemetry.txt
.devcontainer/agents/: Dockerfile  compose.yml  devcontainer.json  post_create_tests.py
.github/workflows/: build-app.yml  ci.yml  release.yml
app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  theme.ts
app/src-tauri/: Cargo.toml  Info.plist  app.entitlements  backend.entitlements  build-audiotap.sh  build.rs  tauri.conf.json
app/src-tauri/audiotap/: Package.swift
app/src-tauri/audiotap/Sources/otto-audiotap/: main.swift
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: generate_icons.py  icon.icns
app/src-tauri/src/: lib.rs  main.rs  stealth.rs  tray.rs
app/src/components/: ConnectionBanner.tsx  ErrorBoundary.tsx  ExoOperations.tsx  Layout.tsx  NotificationCenter.tsx  RunningChip.tsx  Sidebar.tsx
app/src/config/: apiBase.ts
app/src/context/: ConnectionContext.tsx  NotificationContext.tsx  ThemeContext.tsx
app/src/hooks/: useAmbientHints.ts  useAmbientSweepStatus.ts  useApi.ts  useBackendReady.ts  useFirstRun.ts  useOnlineStatus.ts  usePolling.ts  useTranscribe.ts  useVoice.ts  useWebSocket.ts
app/src/pages/: ActivityPage.tsx  AgentsPage.tsx  ChatPage.tsx  DashboardPage.tsx  HistoryPage.tsx  MemoryPage.tsx  RunDetailPage.tsx  RunsPage.tsx  ScheduleRunsPage.tsx  SchedulesPage.tsx  SettingsPage.tsx  SkillsPage.tsx  ToolsPage.tsx  TriggerRunsPage.tsx  TriggersPage.tsx
app/src/types/: index.ts
app/src/utils/: appBadge.ts  askOttoBridge.ts  askOttoBus.ts  compactMode.ts  entityIcons.tsx  formatFileSize.ts  formatRelativeTime.ts  highRiskCommands.ts  mergeToolMessages.ts  nativeNotify.ts  screenShareVisibility.ts  stealthFadeOpacity.ts  stealthWindow.ts  subagentModelChip.ts  toolLabels.ts  transcribePanel.ts
backend/: __init__.py  __main__.py  activity_tools.py  activity_tracker.py  agent_library.py  agent_management_tools.py  ambient_agent.py  ambient_store.py  ambient_tools.py  ask_user_tools.py  config.py  consolidation_lock.py  credential_vault.py  embedding_index.py  eval_runner.py  exo_catalog.py  exo_cli.py  exo_discovery.py  exo_provisioner.py  exo_runtime.py  exo_setup.py  exo_tools.py  file_tools.py  managed_triggers.py  mcp_builder.py  mcp_builder_tools.py  mcp_manager.py  mcp_sandbox.py  mcp_signer.py  memory.py  memory_extraction.py  memory_relevance.py  mlx_catalog.py  mlx_hub_paths.py  node_provisioner.py  omlx_provisioner.py  omlx_tools.py  openclaw_watcher.py  output_redactor.py  playwright_pool.py  (+26 more)
backend/auth/: __init__.py  base.py  browser_capture.py  oauth_authcode.py  oauth_device.py  static.py  utils.py
backend/builtin_mcps/: __init__.py  registry.py
backend/builtin_mcps/discord/: README.md  _helpers.py  server.py
backend/capture/: __init__.py  screen_capture.py
backend/routes/: activity.py  agents.py  ambient.py  capture.py  embeddings.py  exo.py  hooks.py  mcp.py  mcp_config.py  memory.py  mlx.py  node.py  omlx.py  openclaw_hooks.py  privacy.py  runs.py  schedules.py  sessions.py  settings.py  setup.py  triggers.py  vault.py  voice.py
backend/voice/: __init__.py  audio_io.py  loopback_manager.py  stt.py  vad.py  voice_manager.py  wake.py
demo/: package-lock.json
docs/: QUICKSTART.md  activity.md  agents.md  capture.md  chat.md  dashboard.md  features.md  runs.md  schedules.md  settings.md  suggestions.md  triggers.md
scripts/: bench_ssd.py  bench_turbo.py  build_backend.py  build_exo.py  build_mac.sh  exo_cli.py  seed_ambient_hints.py  sign_and_notarize.sh  smoke_test_mcp_builder.py  smoke_test_mcp_integration.py  smoke_test_mcp_lifecycle.py  test_semantic_search.py
scripts/lib/: bootstrap.sh
src/agents/: __init__.py  computer_voyager.py  web_voyager.py
src/callbacks/: __init__.py  agent_callback.py  base.py
src/chat_models/: __init__.py  bedrock.py
src/deep_agent/: __init__.py  agent.py  model_factory.py  options.py  prompt.py  subagent_factory.py  tool_factory.py
src/loaders/: __init__.py  web_loader.py
src/middleware/: __init__.py  _react_core.py  context_truncation.py  file_attachment_filename.py  playwright_pruning.py  react_middleware.py  react_wrapper.py  repeated_thought_guard.py  repetition_guard.py  tool_call_budget.py  tool_image_relocation.py
src/tools/: __init__.py  base.py  image_utils.py  large_results_grep.py  loop_guard.py  math_tool.py  schemas.py  str_utils.py
src/utilities/: __init__.py  environment.py  logger.py
tests/: conftest.py  test_app_secret_vault.py  test_auth_providers.py  test_build_exo_relocatable.py  test_credential_vault_bundle.py  test_desktop_lease.py  test_discord_helpers.py  test_doc_image_extraction.py  test_environment.py  test_exo_prereqs.py  test_exo_runtime.py  test_file_attachment_filename.py  test_lite_mode_integration.py  test_loop_abort_wiring.py  test_loop_guard.py  test_macos_applescript_agent.py  test_macos_mail_helpers.py  test_macos_osascript_introspection.py  test_macos_vision_ocr.py  test_macos_vision_wiring.py  test_mcp_auth_routes.py  test_mcp_manager_tool_dedup.py  test_mcp_security.py  test_microsoft_teams_helpers.py  test_node_provisioner.py  test_node_routes.py  test_omlx_provisioner.py  test_path_containment.py  test_playwright_error_detection.py  test_playwright_pruning.py  test_privacy_lock.py  test_prompt_lite.py  test_react_planning.py  test_repeated_thought_guard.py  test_repetition_guard.py  test_safety_middleware.py  test_sidecar_paths.py  test_slack_helpers.py  test_tool_call_budget.py  test_tool_image_relocation.py  (+3 more)
tests/live/: conftest.py  test_file_write_smoke.py  test_hitl.py  test_memory_extraction.py  test_mlx_react_by_family.py  test_output_redactor.py  test_privacy_live.py  test_secondary_llm.py  test_server_providers.py  test_streaming.py  test_subagent_dispatch.py  test_tool_dispatch.py
(+124 files in other folders)
