[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agents"
version = "0.1.0"
description = "MLX Agents"
requires-python = ">=3.11"
dependencies = [
    # Core
    "certifi>=2024.0.0",
    # Uses the OS trust store for TLS so corporate inspection proxies
    # (whose root CA is in the keychain but not certifi) don't break
    # outbound HTTPS — see SSL injection in backend/server.py.
    "truststore>=0.9.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.25.0",
    # Native file watcher for `uvicorn --reload`. Without it uvicorn falls back
    # to the StatReload poller, which can't handle our reload config and hangs
    # the dev backend before it binds the port.
    "watchfiles>=0.21.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",

    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    # langchain_classic.chains.base.Chain — used by playwright_navigator.py
    "langchain-classic>=1.0.0",
    "langchain-cohere>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-aws>=0.2.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "deepagents>=0.4.5",

    # MLX local inference (Apple Silicon)
    "mlx>=0.31.1",
    "mlx-lm>=0.31.2",
    "mlx-vlm>=0.4.4",
    "transformers>=5.0.0",
    "huggingface-hub>=1.3.0",
    # Optional accelerator for non-Xet repos.  Used in
    # ``backend/routes/mlx.py`` via ``HF_HUB_ENABLE_HF_TRANSFER=1`` for a
    # single download call; the worker retries without it on failure
    # because hf_transfer has no graceful resume.
    "hf_transfer>=0.1.8",

    # Wikipedia (used by tools.research.wikipedia)
    "wikipedia>=1.4.0",

    # YouTube transcripts (langchain_community.YoutubeLoader backend —
    # used by tools.research.youtube_transcript)
    "youtube-transcript-api>=1.0.0",

    # macOS desktop automation
    "pyautogui>=0.9.54",
    "pyobjc-core>=10.0",
    "pyobjc-framework-Cocoa>=10.0",                 # AppKit, Foundation
    "pyobjc-framework-ApplicationServices>=10.0",   # Accessibility API (AXUIElement*)
    "pyobjc-framework-Vision>=10.0",                # on-device OCR (VNRecognizeTextRequest) for AX-disabled apps
    "pyobjc-framework-Quartz>=10.0",                # CGWindowList — window bounds/capture without Accessibility

    # Browser automation
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",

    # Image processing
    "Pillow>=10.0.0",

    # MCP
    "mcp>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",

    # Token splitters
    "tiktoken>=0.12.0",

    # Observability
    "traceloop-sdk>=0.33.0",

    # SQLite
    "aiosqlite",

    # Nested event loops (Jupyter)
    "nest-asyncio>=1.6.0",

    # Misc
    "strenum",
    "grandalf",

    # Anthropic SDK
    "anthropic>=0.40.0",

    # Research tools (web/doc researcher)
    "ddgs>=9.0.0",
    "markdownify>=0.13.0",
    "rank-bm25>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=1.0.0",
    "openpyxl>=3.1.0",

    # Semantic search (sqlite-vec + MLX embeddings — Apple Silicon only at runtime)
    "sqlite-vec>=0.1.0",
    # Evaluation
    "deepeval>=2.0.0",

    # Remote transcript access (OpenClaw SSH)
    "asyncssh>=2.17.0",

    # JWT decoding
    "PyJWT>=2.0.0",

    # WebSocket (backend streaming)
    "websockets>=14.0",

    # Scheduler (backend cron jobs)
    "APScheduler>=3.10.0,<4",

    # Credential vault — wraps macOS Keychain / Linux Secret Service
    # / Windows Credential Manager so backend can store API keys and
    # OAuth tokens for agent-built MCP servers without ever exposing
    # them to the LLM context.
    "keyring>=25.0.0",

    # Voice subsystem (STT + wake word — optional, lazy-imported)
    # Installed unconditionally so the backend can import them at startup;
    # the heavy model weights are only downloaded when the user opts in via
    # Settings → Voice.
    "mlx-whisper>=0.4.0",
    "openwakeword>=0.6.0",
    "onnxruntime>=1.17.0",
    "sounddevice>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/agents",
    "src/callbacks",
    "src/chat_models",
    "src/deep_agent",
    "src/loaders",
    "src/middleware",
    "src/tools",
    "src/tools/evaluation",
    "src/tools/transcripts",
    "src/utilities",
    "backend",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "flake8>=7.0.0",
    "ipykernel",
    "ipywidgets",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live: live LLM integration tests that make real API/model calls (deselect with '-m not live')",
    "mlx_qwen: MLX Qwen/Qwen3 family live tests — requires MLX_QWEN_MODEL_ID env var",
    "mlx_deepseek: MLX DeepSeek-R1 family live tests — requires MLX_DEEPSEEK_MODEL_ID env var",
    "mlx_kimi: MLX Kimi/Moonshot family live tests — requires MLX_KIMI_MODEL_ID env var",
]
addopts = "-m 'not live'"
timeout = 120
