[package]
name = "otto"
version = "0.1.0"
description = "Otto Desktop Application"
edition = "2021"

[lib]
name = "otto_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Used to toggle the main window's NSWindow.sharingType so Otto can be excluded
# from screen capture / screen sharing (e.g. Google Meet) on macOS.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder", "NSApplication", "NSRunningApplication", "NSDockTile", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSString", "NSData"] }
